# CapsLockLanguageSwitch

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  main.cpp  resource.aps  resource.h  resource.rc  toolchain-mingw.cmake
lang/: en_us.cpp  en_us.h  ja.cpp  ja.h  kr.cpp  kr.h  switch.cpp  switch.h
